# reverse-captcha-eval

./: .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
packs/hidden_message_extraction/: README.md  cases.yaml  grader.py  pack.yaml
packs/reverse_captcha/: cases.yaml  generate_cases.py  grader.py  pack.yaml  qa_pairs.yaml
packs/watermark_robustness/: README.md  cases.yaml  grader.py  pack.yaml
paper/: reverse_captcha.tex
report/: whitepaper_template.md
results/: deepseek_debug.json  reverse_captcha_all_results.csv
results/journal/analysis/: cell_stats.csv  chi_squared.csv  encoding_comparison.csv  pairwise_fisher.csv  payload_comparison.csv  tools_ablation.csv
results/journal/pilot_analysis/: cell_stats.csv  chi_squared.csv  encoding_comparison.csv  pairwise_fisher.csv  payload_comparison.csv  raw_results.csv
scripts/: analyze_journal.py  detailed_results.json  detailed_results_claude.json  detailed_results_haiku.json  detailed_results_sonnet.json  export_all_results.py  extract_prompts.py  generate_figures.py  grade_responses.py  merge_pilot_into_eval.py  prompts.json  regrade_all.py  responses.json  responses_claude.json  responses_haiku.json  responses_sonnet.json  resume_anthropic.sh  run_claude_eval.py  run_journal_eval.sh
src/evalrun/: cli.py  db.py  pack_loader.py  runner.py
src/evalrun/adapters/: anthropic_adapter.py  base.py  openai_adapter.py
tests/: conftest.py  test_anthropic_adapter.py  test_db.py  test_graders.py  test_runner.py  test_tools.py
(+6 files in other folders)
